0.10.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.customizable_viz.VizTransect.rst.txt
polaris.tasks.ocean.customizable\_viz.VizTransect
=================================================

.. currentmodule:: polaris.tasks.ocean.customizable_viz

.. autoclass:: VizTransect

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~VizTransect.__init__
      ~VizTransect.add_dependency
      ~VizTransect.add_input_file
      ~VizTransect.add_output_file
      ~VizTransect.check_properties
      ~VizTransect.constrain_resources
      ~VizTransect.map_from_native_model_vars
      ~VizTransect.map_to_native_model_vars
      ~VizTransect.open_model_dataset
      ~VizTransect.process_inputs_and_outputs
      ~VizTransect.run
      ~VizTransect.runtime_setup
      ~VizTransect.set_resources
      ~VizTransect.set_shared_config
      ~VizTransect.setup
      ~VizTransect.validate_baselines
      ~VizTransect.write_model_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~VizTransect.component
   
   